Fix details font size on tablet view

--- a/scss/components/_btn-wrapper.scss
+++ b/scss/components/_btn-wrapper.scss
@@ -62,7 +62,7 @@
   }
 }
 
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 1025px) {
   .btn-wrapper {
     margin: 2em 0;
   }
