--- a/scss/components/_screen-forms.scss
+++ b/scss/components/_screen-forms.scss
@@ -94,7 +94,7 @@
   }
 }
 
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 1025px) {
   .screen-forms {
     @include flex-column;
   }
