--- a/scss/feedback.scss
+++ b/scss/feedback.scss
@@ -276,7 +276,7 @@ body {
   }
 }
 
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 1025px) {
   body {
     min-height: fit-content;
     overflow: auto;
