--- a/scss/main.scss
+++ b/scss/main.scss
@@ -230,7 +230,7 @@ body {
   }
 }
 
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 1025px) {
   body {
     min-height: fit-content;
     overflow: auto;
